--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
 @import './app/shared/scss/colors.scss';
 @import './app/shared/scss/sizes.scss';
 
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0;
 }
@@ -24,4 +28,11 @@ html, body {
 *::-webkit-scrollbar-thumb {
   background-color: $scrollbar;
   border-radius: $scrollbarBorderRadius;
+}
+
+// Custom Classes
+
+.container {
+  padding-right: 160px;
+  padding-left: 160px;
 }
